<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">caculate</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="left_bracket">(</string>
    <string name="right_bracket">)</string>
    <string name="divisor">÷</string>
    <string name="backspace">C</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="product">*</string>
    <string name="four">4</string>
	<string name="five">5</string>
	<string name="six">6</string>
	<string name="minus">-</string>
	<string name="one">1</string>
	<string name="two">2</string>
	<string name="three">3</string>
	<string name="plus">+</string>
	<string name="point">.</string>
	<string name="zero">0</string>
	<string name="equal">=</string>
</resources>