<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/output_window"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="right"
            android:textIsSelectable="true"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/answer_window"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="2"
            android:gravity="right"
            android:textIsSelectable="true"
            android:textSize="30sp" />
        
    </LinearLayout>

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1" >

        <TableRow
            android:layout_width="fill_parent"
            android:layout_weight="0.2" >

            <Button
                android:id="@+id/left_bracket_button"
                android:layout_height="fill_parent"
                android:layout_marginBottom="1dp"
                android:layout_marginLeft="1dp"
                android:layout_weight="0.25"
                android:background="#333333"
                android:text="@string/left_bracket"
                android:textColor="@android:color/white"
                android:textSize="25sp" />

            <Button
                android:id="@+id/right_bracket_button"
                android:layout_height="fill_parent"
                android:layout_marginBottom="1dp"
                android:layout_marginLeft="1dp"
                android:layout_weight="0.25"
                android:background="#333333"
                android:text="@string/right_bracket"
                android:textColor="@android:color/white"
                android:textSize="25sp" />

            <Button
                android:id="@+id/divisor_button"
                android:layout_height="fill_parent"
                android:layout_marginBottom="1dp"
                android:layout_marginLeft="1dp"
                android:layout_weight="0.25"
                android:background="#333333"
                android:text="@string/divisor"
                android:textColor="@android:color/white"
                android:textSize="25sp" />

            <Button
                android:id="@+id/backspace_button"
                android:layout_height="fill_parent"
                android:layout_marginBottom="1dp"
                android:layout_marginLeft="1dp"
                android:layout_weight="0.25"
                android:background="#ffa500"
                android:text="@string/backspace"
                android:textSize="25sp" />
        </TableRow>

        <TableRow android:layout_weight="0.2" >

            <Button
                android:id="@+id/seven_button"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginBottom="1dp"
                android:layout_marginLeft="1dp"
                android:layout_weight="0.25"
                android:background="@android:color/darker_gray"
                android:text="@string/seven"
                android:textSize="25sp" />

            <Button
                android:id="@+id/eight_button"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginBottom="1dp"
                android:layout_marginLeft="1dp"
                android:layout_weight="0.25"
                android:background="@android:color/darker_gray"
                android:text="@string/eight"
                android:textSize="25sp" />

            <Button
                android:id="@+id/nine_button"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginBottom="1dp"
                android:layout_marginLeft="1dp"
                android:layout_weight="0.25"
                android:background="@android:color/darker_gray"
                android:text="@string/nine"
                android:textSize="25sp" />

            <Button
                android:id="@+id/product_button"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginBottom="1dp"
                android:layout_marginLeft="1dp"
                android:layout_weight="0.25"
                android:background="#333333"
                android:text="@string/product"
                android:textColor="@android:color/white"
                android:textSize="25sp" />
        </TableRow>

        <TableRow android:layout_weight="0.2" >

            <Button
                android:id="@+id/four_button"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginBottom="1dp"
                android:layout_marginLeft="1dp"
                android:layout_weight="0.25"
                android:background="@android:color/darker_gray"
                android:text="@string/four"
                android:textSize="25sp" />

            <Button
                android:id="@+id/five_button"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginBottom="1dp"
                android:layout_marginLeft="1dp"
                android:layout_weight="0.25"
                android:background="@android:color/darker_gray"
                android:text="@string/five"
                android:textSize="25sp" />

            <Button
                android:id="@+id/six_button"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginBottom="1dp"
                android:layout_marginLeft="1dp"
                android:layout_weight="0.25"
                android:background="@android:color/darker_gray"
                android:text="@string/six"
                android:textSize="25sp" />

            <Button
                android:id="@+id/minus_button"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginBottom="1dp"
                android:layout_marginLeft="1dp"
                android:layout_weight="0.25"
                android:background="#333333"
                android:text="@string/minus"
                android:textColor="@android:color/white"
                android:textSize="25sp" />
        </TableRow>

        <TableRow android:layout_weight="0.2" >

            <Button
                android:id="@+id/one_button"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginBottom="1dp"
                android:layout_marginLeft="1dp"
                android:layout_weight="0.25"
                android:background="@android:color/darker_gray"
                android:text="@string/one"
                android:textSize="25sp" />

            <Button
                android:id="@+id/two_button"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginBottom="1dp"
                android:layout_marginLeft="1dp"
                android:layout_weight="0.25"
                android:background="@android:color/darker_gray"
                android:text="@string/two"
                android:textSize="25sp" />

            <Button
                android:id="@+id/three_button"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginBottom="1dp"
                android:layout_marginLeft="1dp"
                android:layout_weight="0.25"
                android:background="@android:color/darker_gray"
                android:text="@string/three"
                android:textSize="25sp" />

            <Button
                android:id="@+id/plus_button"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginBottom="1dp"
                android:layout_marginLeft="1dp"
                android:layout_weight="0.25"
                android:background="#333333"
                android:text="@string/plus"
                android:textColor="@android:color/white"
                android:textSize="25sp" />
        </TableRow>

        <TableRow android:layout_weight="0.2" >

            <Button
                android:id="@+id/zero_button"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginBottom="1dp"
                android:layout_marginLeft="1dp"
                android:layout_weight="0.25"
                android:background="@android:color/darker_gray"
                android:text="@string/zero"
                android:textSize="25sp" />

            <Button
                android:id="@+id/point_button"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginBottom="1dp"
                android:layout_marginLeft="1dp"
                android:layout_weight="0.25"
                android:background="@android:color/darker_gray"
                android:text="@string/point"
                android:textSize="25sp" />

            <Button
                android:id="@+id/equal_button"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginBottom="1dp"
                android:layout_marginLeft="1dp"
                android:layout_span="2"
                android:layout_weight="0.5"
                android:background="#00CC00"
                android:text="@string/equal"
                android:textSize="25sp" />
        </TableRow>
    </TableLayout>

</LinearLayout>